<resources>
    <string name="app_name">GestFV</string>
    <string name="logo_app">Logo de app</string>
    <string name="email">Email:</string>
    <string name="contrasena">Contraseña:</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="registrate_ahora">No tiene cuenta? Registrate ahora</string>
    <string name="registro">Registro</string>
    <string name="introducir_mail">Introduce el email:</string>
    <string name="introducir_contrasena">Introduce la contraseña:</string>
    <string name="repetir_contrasena">Repite la nueva contraseña:</string>
    <string name="registrarse">Registrarse</string>
    <string name="alquilar_vehiculo">Alquilar un vehículo</string>
    <string name="ver_alquileres">Ver alquileres</string>
    <string name="gestionar_perfil">Gestionar mi perfil</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="listado_alquileres">Lista de alquileres</string>
    <string name="alquilar">Alquilar</string>
    <string name="ejemplo"> </string>
    <string name="euro">€</string>
    <string name="datos_vehiculo">Datos del vehículo</string>
    <string name="marca">Marca:</string>
    <string name="modelo">Modelo:</string>
    <string name="potencia">Potencia:</string>
    <string name="combustible">Combustible:</string>
    <string name="precio_dia">Precio/dia:</string>
    <string name="datos_alquiler">Datos del alquiler:</string>
    <string name="fecha_inicio">Fecha de inicio:</string>
    <string name="fecha_fin">Fecha de fin:</string>
    <string name="total_pagar">Total a pagar:</string>
    <string name="finalizar_pagar">Finalizar y pagar</string>
    <string name="perfil">Perfíl</string>
    <string name="datos_usuario">Datos del usuario</string>
    <string name="nombre">Nombre:</string>
    <string name="dni">DNI:</string>
    <string name="fecha_nac">Fecha nac:</string>
    <string name="telefono">Teléfono:</string>
    <string name="cambio_contrasena">Cambio de contraseña:</string>
    <string name="cambiar_contrasena">Cambiar contraseña</string>
    <string name="mis_alquileres">Mis alquileres</string>
    <string name="listado_vehiculos">Listado de vehículos</string>
    <string name="pago">Pago</string>
    <string name="google_pay">Google Pay</string>
    <string name="efectivo">Efectivo</string>
    <string name="metodo_pago">Método de pago:</string>
    <string name="anio">Año:</string>
    <string name="matricula_vehiculo">Matricula vehículo:</string>
    <string name="uid_usuario">UID usuario:</string>
    <string name="uid">UID:</string>
    <string name="precio_total">Precio total:</string>
    <string name="actualizar_datos_usuario">Actualizar datos de usuario</string>
    <string name="contrasena_actual">Contraseña actual:</string>
    <string name="contrasena_nueva">Nueva contraseña:</string>
    <string name="ver_vehiculo">Ver vehículo</string>
    <string name="cambiar_datos_usuario">Cambiar datos del usuario:</string>
    <string name="estado_alquiler">Estado del alquiler:</string>
    <string name="estado_vehiculo">Estado del vehículo:</string>
    <string name="cv">cv</string>
    <string name="gestionar_vehiculos">Gestionar vehículos</string>
    <string name="gestionar_alquileres">Gestionar alquileres</string>
    <string name="gestionar_usuarios">Gestionar usuarios</string>
    <string name="recordar_credenciales">Recordar inicio de sesión</string>
    <string name="id_pago">ID Pago:</string>
    <string name="volver">Volver</string>
    <string name="vehiculo">Vehiculo:</string>
    <string name="matricula">Matricula:</string>
    <string name="reservar">Reservar</string>
    <string name="listado_usuarios">Listado de usuarios</string>
    <string name="restablecer_credenciales">Olvidó su contraseña? Restablecela aquí</string>
    <string name="restablecer">Restablecer</string>
    <string name="borrar_usuario">Borrar usuario</string>
    <string name="borrar_alquiler">Borrar alquiler</string>
    <string name="borrar">Borrar</string>
    <string name="deshabilitar">On/Off</string>
    <string name="disponibilidad">Disponibilidad:</string>
    <string name="localizar">Localizar</string>
    <string name="ver_usuario">Ver usuario</string>
    <string name="ver_alquiler">Ver alquiler</string>
    <string name="usuario">Usuario:</string>
    <string name="alquiler">Alquiler:</string>
    <string name="tipo">Tipo de usuario:</string>
    <string name="localizacion">Localización:</string>
    <string name="visibilidad_vehiculo">Visibilidad:</string>
    <string name="id_alquiler">ID Alquiler:</string>
    <string name="km">Km:</string>
    <string name="revisiones">Revisiones</string>
    <string name="introduce_email">Introduce la dirección de email de la cuenta:</string>
    <string name="completar_datos">Completar datos del perfíl:</string>
    <string name="cambiar_datos">Cambiar datos</string>
    <string name="tipo_revision">Tipo de revisión:</string>
    <string name="kilometraje">Kilometraje:</string>
    <string name="fecha_revision">Fecha revisión:</string>
    <string name="precio_revision">Precio revisión:</string>
    <string name="id_revision">ID revisión:</string>
    <string name="borrar_revision">Borrar revisión</string>
    <string name="agregar_vehiculo">Agregar vehículo</string>
    <string name="lista_revisiones">Lista de revisiones:</string>
    <string name="completar_perfil">Completar perfíl</string>
    <string name="agregar">Agregar</string>
    <string name="visibilidad">Visibilidad</string>
    <string name="confirmar">Confirmar</string>
    <string name="reparacion">Reparación</string>
    <string name="mantenimiento">Mantenimiento</string>
    <string name="itv">ITV</string>
    <string name="siguiente_revision_agregar">Siguente revisión(si procede):</string>
    <string name="siguiente_revision">Siguente revisión:</string>
    <string name="agregar_revision">Agregar revisión</string>
    <string name="elegir_fecha">Elige las fechas de inicio y fin de alquiler:</string>
    <string name="vehiculos_disponibles">Vehículos disponibles:</string>
    <string name="iniciar_busqueda">Iniciar búsqueda</string>
    <string name="url_imagen">URL Imágen:</string>
    <string name="disponible">Disponible</string>
    <string name="no_disponible">No disponible</string>
    <string name="diesel">Diésel</string>
    <string name="gasolina">Gasolina</string>
    <string name="email_actual">Email actual:</string>
    <string name="hibrido">Híbrido</string>
    <string name="tipo_combustible">Tipo combustible:</string>
    <string name="busqueda_vehiculos">Busqueda de vehículos</string>
    <string name="borrar_cuenta_usuario">Borrar cuenta de usuario:</string>
    <string name="borrar_cuenta">Borrar cuenta</string>
    <string name="recargar_lista">Recargar lista</string>
    <string name="asunto">Asunto:</string>
    <string name="mensaje">Mensaje:</string>
    <string name="enviar">Enviar</string>
    <string name="editar_usuario">Editar usuario</string>
    <string name="editar">Editar</string>
    <string name="obtener_ayuda">Obtener ayuda</string>
    <string name="obtener_ayuda_texto">Por favor diganos que te sucede para poder ayudarte, nuestros administradores se pondrán en contacto lo ántes posible para resolver cualquier problema. (Tiempo de respuesta medio: 15 minutos)</string>
    <string name="cambio_email">Cambio de email:</string>
    <string name="nuevo_email">Nuevo email:</string>
    <string name="editar_email">Editar email</string>
    <string name="cambio_telefono">Cambio de teléfono:</string>
    <string name="nuevo_telefono">Nuevo teléfono:</string>
    <string name="editar_telefono">Editar teléfono</string>
    <string name="ver_historial">Ver Historial</string>
    <string name="volver_menu">Volver al menú principal</string>
    <string name="reserva_realizada">Reserva realizada con éxito.</string>
    <string name="confirmacion_reserva">Confirmación de reserva</string>
    <string name="mensaje_confirmacion_alquiler">Puede pasar a recoger el vehículo a partir de la fecha de inicio indicada.</string>

</resources>