<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:background="@drawable/fondo_items">

    <ImageView
        android:id="@+id/icono_item_revision"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp" />

    <RelativeLayout
        android:id="@+id/rl1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/icono_item_revision"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/fondo_descripcion_item"
        android:padding="20sp">

        <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_matricula_vehiculo_revision_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/matricula_vehiculo"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/tv_mostrar_matricula_vehiculo_revision_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:text="@string/ejemplo"
                android:textAlignment="textStart" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_tipo_revision_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tipo_revision"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/tv_mostrar_tipo_revision_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:text="@string/ejemplo"
                android:textAlignment="textStart" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll3"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_kilometraje_revision_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kilometraje"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/tv_mostrar_kilometraje_revision_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:text="@string/ejemplo"
                android:textAlignment="textStart" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll4"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_fecha_revision_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fecha_revision"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/tv_mostrar_fecha_revision_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:text="@string/ejemplo"
                android:textAlignment="textStart" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll5"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_siguiente_fecha_revision_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/siguiente_revision"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/tv_mostrar_siguiente_fecha_revision_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:text="@string/ejemplo"
                android:textAlignment="textStart" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll6"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_precio_revision_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/precio_revision"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/tv_mostrar_precio_revision_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:text="@string/ejemplo"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/tv_divisa_vehiculo_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/euro"
                android:textAlignment="textStart" />

        </LinearLayout>

    </RelativeLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/boton_borrar_revision_admin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl1"
        android:layout_marginStart="84dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="16dp"
        android:drawableLeft="@drawable/ic_delete"
        android:drawableTint="@color/white"
        android:text="@string/borrar_revision"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:backgroundTint="@color/boton_gris" />

</RelativeLayout>