<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:background="@drawable/fondo_items">

    <ImageView
        android:id="@+id/icono_item_alquiler_admin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_rental_48" />

    <RelativeLayout
        android:id="@+id/rl1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/icono_item_alquiler_admin"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/fondo_descripcion_item"
        android:padding="20sp">

        <ImageView
            android:id="@+id/imagen_vehiculo_item_alquiler_admin"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginStart="55dp"
            android:layout_marginEnd="55dp"
            android:layout_marginBottom="16dp"
            android:scaleType="fitXY" />

        <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imagen_vehiculo_item_alquiler_admin" android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_matricula_vehiculo_alquiler_item_admin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/matricula_vehiculo"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/tv_mostrar_matricula_vehiculo_alquiler_item_admin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:text="@string/ejemplo"
                android:textAlignment="textStart" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_uid_usuario_alquiler_item_admin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uid_usuario"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/tv_mostrar_uid_usuario_alquiler_item_admin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:text="@string/ejemplo"
                android:textAlignment="textStart" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll3"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_fecha_inicio_alquiler_item_admin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fecha_inicio"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/tv_mostrar_fecha_inicio_alquiler_item_admin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:text="@string/ejemplo"
                android:textAlignment="textStart" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll4"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_fecha_fin_alquiler_item_admin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fecha_fin"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/tv_mostrar_fecha_fin_alquiler_item_admin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:text="@string/ejemplo"
                android:textAlignment="textStart" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll5"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_metodo_pago_alquiler_item_admin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/metodo_pago"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/tv_mostrar_metodo_pago_alquiler_item_admin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:text="@string/ejemplo"
                android:textAlignment="textStart" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll7"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_precio_total_alquiler_item_admin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/precio_total"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/tv_mostrar_precio_total_alquiler_item_admin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:text="@string/ejemplo"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/tv_mostrar_divisa_precio_total_alquiler_item_admin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:text="@string/euro"
                android:textAlignment="textStart" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll8"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_estado_alquiler_item_admin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/estado_alquiler"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/tv_mostrar_estado_total_alquiler_item_admin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:text="@string/ejemplo"
                android:textAlignment="textStart" />
        </LinearLayout>

    </RelativeLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/boton_ver_usuario_alquiler_item_admin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl1"
        android:layout_marginStart="84dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="84dp"
        android:drawableLeft="@drawable/ic_show"
        android:drawableTint="@color/white"
        android:text="@string/ver_usuario"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:backgroundTint="@color/boton_gris" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/boton_borrar_alquiler_item_admin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/boton_ver_usuario_alquiler_item_admin"
        android:layout_marginStart="84dp"
        android:layout_marginEnd="84dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="16dp"
        android:drawableLeft="@drawable/ic_delete"
        android:drawableTint="@color/white"
        android:text="@string/borrar_alquiler"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:backgroundTint="@color/boton_gris" />

</RelativeLayout>