<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:background="@drawable/fondo_items">

    <ImageView
        android:id="@+id/imagen_item_vehiculo"
        android:layout_width="match_parent"
        android:layout_height="165dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:scaleType="fitXY" />

    <RelativeLayout
        android:id="@+id/rl1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imagen_item_vehiculo"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/fondo_descripcion_item"
        android:padding="20sp">

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_mostrar_marca_vehiculo_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:paddingBottom="16sp"
                android:text="@string/ejemplo"
                android:textAlignment="textStart"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_mostrar_modelo_vehiculo_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="7dp"
                android:paddingBottom="16sp"
                android:text="@string/ejemplo"
                android:textAlignment="textStart"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_below="@id/ll1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_anio_vehiculo_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anio"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/tv_mostrar_anio_vehiculo_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:text="@string/ejemplo"
                android:textAlignment="textStart" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_potencia_vehiculo_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/potencia"

                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/tv_mostrar_potencia_vehiculo_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:text="@string/ejemplo"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/tv_cv_vehiculo_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:text="@string/cv"
                android:textAlignment="textStart" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll3"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_combustible_vehiculo_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/combustible"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/tv_mostrar_tv_combustible_vehiculo_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:text="@string/ejemplo"
                android:textAlignment="textStart" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll4"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_kilometraje_vehiculo_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/km"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/tv_mostrar_kilometraje_vehiculo_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:text="@string/ejemplo"
                android:textAlignment="textStart" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll5"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_precio_diario_vehiculo_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/precio_dia"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/tv_mostrar_precio_diario_vehiculo_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:text="@string/ejemplo"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/tv_divisa_vehiculo_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:text="@string/euro"
                android:textAlignment="textStart" />

        </LinearLayout>

    </RelativeLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/boton_alquilar_vehiculo_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl1"
        android:layout_marginStart="84dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="16dp"
        android:drawableLeft="@drawable/ic_car_rental_24"
        android:drawableTint="@color/white"
        android:text="@string/alquilar"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:backgroundTint="@color/boton_gris" />

</RelativeLayout>